2005-05-09  Paul Stevens <paul@nfg.nl>

	* pool.c (manage_stop_children): guard against sending broadcast
	signals (closes: #198).
	* server.c (ParentSigHandler): wait for zombies (closes: #199).
	
2005-05-06  Paul Stevens <paul@nfg.nl>

	* check_dbmail_deliver.c, dbmail-user.c, config.c, lmtp.c, dsn.c, 
	check_dbmail_common.c, pipe.c, dbmail-message.c, auth/authldap.c,
	main.c, check_dbmail_message.c: plugged lots of memory leakage.
	* dbmail-imapsession.c: fixed a double free.
	* server.c: use db_check_connection instead of
	db_connect/db_disconnect in main loop.

2005-05-03  Paul Stevens <paul@nfg.nl>

	* check_dbmail_common.c, check_dbmail_deliver.c, check_dbmail_imapd.c, 
	check_dbmail_message.c, check_dbmail_server.c, check_dbmail_user.c, 
	check_dbmail_util.c: removed suite_free call.
	* db.c, dbmail-message.c, dbmail-message.h, misc.c, misc.h,
	sql/mysql/add_header_tables.mysql: expanded the headercaching code to
	include support for (base)subject, (sent)date, and references.

2005-04-19  Paul Stevens <paul@nfg.nl>

	* dbmail-message.c, dbmail-message.h, check_dbmail_message.c: add
	initial support for base subject.
	* list.c, list.h, and many others: move the internal list
	implementation to the dm_ namespace to avoid conflicts with gmime2.1's
	own internal list setup.
	* server.c, serverchild.c, pool.c: make dbmail servers in prefork mode
	die when the database backend dies (closes #190).

2005-04-08  Paul Stevens <paul@nfg.nl>

	* db.c, db.h, server.c, main.c: db_check_version added.
	* README.ldap: added file to package root.
	* README, TODO, BUGS, EXTRAS: update files for 2.1 release.
	* acinclude.m4, INSTALL: document and enforce the glib/gmime 
	build dependency.
	* db.c (db_set_headercache): ignore errors in individual messages and
	remove a double free.

2005-04-06  Paul Stevens <paul@nfg.nl>

	* imap4.c: set COMMAND_SHOW_LEVEL to TRACE_INFO.

2005-04-05  Paul Stevens <paul@nfg.nl>

	* auth/authsql.c: prevent loop in auth_check_user_ext where