@@ -36,6 +36,7 @@ BINDIP=*		  # the ipaddress the dbmail-lmtpd server has to bind
 			  # to, * for all adresses. Use 127.0.0.1 to only 
 			  # bind to localhost.
 PORT=24 			  # the port number the dbmail-lmtpd server has to bind to. 
+#SOCKET=/var/run/dbmail/lmtpd.sock # path to unix-socket (using this will disable inet-sockets)
 NCHILDREN=10			  # default number of LMTP handlers (each is a process) 
 MAXCHILDREN=20			  # max. number of LMTP handlers
 MAXCONNECTS=10000		  # the maximum number of connections a default childs makes
