@@ -1,3 +1,8 @@
+2005-05-11  Paul Stevens <paul@nfg.nl>
+
+	* server.h, server.c, serverchild.c, lmtpd.c, dbmail.conf: added 
+	unix socket support for lmtp.
+
 2005-05-09  Paul Stevens <paul@nfg.nl>
 
 	* pool.c (manage_stop_children): guard against sending broadcast
